--- a/Frontend/css/styles4.css
+++ b/Frontend/css/styles4.css
@@ -124,7 +124,7 @@ header {
 
 /* Blog section styling */
 .Blog-Hero-Section {
-    background-image: url(/Frontend/images/blog.jpg);
+    background-image: url(../images/blog.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -604,7 +604,7 @@ header {
 .newsletter-section {
     padding: 5rem 1rem;
     background-color: #0A0A0A;
-    background-image: url('/Frontend/images/black3_bd.jpg');
+    background-image: url(../images/black3_bd.jpg);
     background-size: cover;
     background-position: center;
     color: white;
