--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -1178,10 +1178,12 @@ footer {
     
     .Hero-Content h1 {
         font-size: 4rem;
+        text-align: center;
     }
     
     .Block-Logo {
         font-size: 4rem;
+        text-align: center;
     }
     
     .category-grid {
